<resources>
    <string name="appName">Trackr App</string>
    <string name="profileText">Profile</string>
    <string name="projectsText">Projects</string>
    <string name="loginText">Логин:</string>
    <string name="inputLoginText">Введите логин</string>
    <string name="passwordText">Пароль:</string>
    <string name="inputPasswordText">Введите пароль</string>
    <string name="logInText">Войти</string>
    <string name="registerText">Зарегистрироваться</string>
    <string name="btnChangePassword">Изменить пароль</string>
    <string name="nameTitle">Имя:</string>
    <string name="surnameTitle">Фамилия:</string>
    <string name="patronymicTitle">Отчество:</string>
    <string name="projectsTitle">Проекты:</string>
    <string name="emailTitle">Почта:</string>
    <string name="phoneNumberTitle">Номер телефона:</string>
    <string name="usernameTitle">Никнейм:</string>
    <string name="confirmText">Подтвердить</string>
    <string name="confirmPasswordTitle">Подтвердите пароль:</string>
    <string name="btnExit">Выйти</string>
    <string name="inputNameText">Введите имя</string>
    <string name="surnameText">Фамилия</string>
    <string name="inputSurnameText">Введите фамилию</string>
    <string name="inputPatronymicText">Введите отчество</string>
    <string name="inputEmailText">Введите почту</string>
    <string name="passwordTitle">Пароль:</string>
</resources>